# gutenbit

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  CNAME  LICENSE  README.md  RELEASING.md  error_report.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.claude/skills/changelog/: SKILL.md
.claude/skills/cli-api-review/: SKILL.md
.claude/skills/discover-battle-tests/: SKILL.md
.claude/skills/gutenbit-live-battle-test/: SKILL.md
.claude/skills/gutenbit-live-battle-test/references/: kei-17-corpus.md
.claude/skills/refactor-html-chunker/: SKILL.md
.github/: BATTLE_TEST_ISSUE_russian_literature.md
.github/issues/: battle-test-classic-authors-selected-works.md  battle-test-classic-authors.md
.github/workflows/: docs.yml  manually-deploy-docs.yml  package-smoke.yml  release.yml
cli/: index.html
concepts/: index.html
docs/: cli.md  concepts.md  gen_ref_pages.py  getting-started.md  hooks.py  index.md  python-api.md  quickstart.md
docs/overrides/: main.html
docs/overrides/partials/: header.html  nav.html  site-brand.html
docs/reference/: index.md
docs/stylesheets/: extra.css
getting-started/: index.html
gutenbit/: __init__.py  __main__.py  _cache.py  _cli_commands.py  _cli_helpers.py  _cli_sections.py  _cli_utils.py  _http.py  _text_utils.py  catalog.py  chunker.py  cli.py  db.py  display.py  download.py  html_chunker.py
gutenbit/cli/: __init__.py  _commands.py  _context.py  _display.py  _json.py  _query.py  _sections.py  _text_utils.py  _types.py
gutenbit/html_chunker/: __init__.py  _common.py  _constants.py  _headings.py  _hierarchy.py  _merging.py  _scanning.py  _sections.py  _toc.py
python-api/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/gutenbit/: index.html
reference/gutenbit/_cache/: index.html
reference/gutenbit/_http/: index.html
reference/gutenbit/_version/: index.html
reference/gutenbit/catalog/: index.html
reference/gutenbit/cli/: index.html
reference/gutenbit/cli/_commands/: index.html
reference/gutenbit/cli/_context/: index.html
reference/gutenbit/cli/_display/: index.html
reference/gutenbit/cli/_json/: index.html
reference/gutenbit/cli/_query/: index.html
reference/gutenbit/cli/_sections/: index.html
reference/gutenbit/cli/_text_utils/: index.html
reference/gutenbit/cli/_types/: index.html
reference/gutenbit/db/: index.html
reference/gutenbit/display/: index.html
reference/gutenbit/download/: index.html
reference/gutenbit/html_chunker/: index.html
reference/gutenbit/html_chunker/_common/: index.html
reference/gutenbit/html_chunker/_headings/: index.html
reference/gutenbit/html_chunker/_scanning/: index.html
reference/gutenbit/html_chunker/_sections/: index.html
reference/gutenbit/html_chunker/_toc/: index.html
scripts/: benchmark_add.py
search/: search_index.json
stylesheets/: extra.css
tests/: test_battle.py  test_chunker.py  test_cli.py  test_display.py  test_docs.py  test_download.py  test_html_chunker.py  test_search.py  test_strip_headers.py  test_version.py
