[project]
name = "gutenbit"
dynamic = ["version"]
description = "Fast local search across public-domain literary works"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Keinan" },
]
requires-python = ">=3.11"
keywords = ["books", "cli", "gutenberg", "search", "sqlite", "text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Utilities",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "rich>=14.3",
]

[project.urls]
Documentation = "https://gutenbit.textualist.org"
Homepage = "https://gutenbit.textualist.org"
Issues = "https://github.com/textualist/gutenbit/issues"
Repository = "https://github.com/textualist/gutenbit"

[project.scripts]
gutenbit = "gutenbit.cli:_entry_point"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.6",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=0.30",
]

[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.5"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
tag-pattern = '^v(?P<version>\d+\.\d+\.\d+)$'

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "gutenbit/_version.py"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not network'"
markers = ["network: tests that require network access (download from Project Gutenberg)"]

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --strict --clean"
serve = "mkdocs serve"
check = "mkdocs build --strict --clean --verbose"

[dependency-groups]
dev = [
    "hatch>=1.14",
    "pytest>=8.0",
    "ruff>=0.9",
    "ty>=0.0.1a7",
]
